force-app/main/default/objects/Benefit_Plan__c/Benefit_Plan__c.object-meta.xml
<CustomObject>
    <label>Benefit Plan</label>
    <nameField>
        <label>Benefit Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>